--- a/cookie-policies.html
+++ b/cookie-policies.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<meta name="description" content="Политика в отношении файлов cookie описывает, что такое файлы cookie, как и почему мы их используем, а также как выбирать настройки и контролировать их использование. Данная политика может быть изменена в любое время">
-	<link rel="stylesheet" href="css/style-about.min.css">
+	<link rel="stylesheet" href="css/style-about.min.css?_v=20210925195907">
 	<link rel="shortcut icon" href="img/logo.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -50,7 +50,7 @@
 		</div>
 
 		<div class="header__logo logo-header">
-			<a href="main.html" class="logo-header__link">med24<img src="img/icons/heart.svg" alt="">online</a>
+			<a href="main.html" class="logo-header__link">med24<img src="img/icons/heart.svg?_v=1632589147598" alt="">online</a>
 			<div class="logo-header__text">Медицинский портал</div>
 		</div>
 		
@@ -503,26 +503,26 @@
         <!--breadcrumbs start-->
         <div class="breadcrumbs">
           <div class="_container">
-            <ol class="breadcrumb breadcrumbs__list" itemscope>
-              <li itemscope itemprop="itemListElement">
+            <ol class="breadcrumb breadcrumbs__list" itemscope itemtype="https://schema.org/BreadcrumbList">
+              <li itemscope itemprop="itemListElement" itemtype="https://schema.org/ListItem">
                 <a class="breadcrumbs__item" href="main.html" itemprop="item">
                   <span itemprop="name">Главная</span>
                 </a>
                 <meta itemprop="position" content="1" />
               </li>
-              <li itemscope itemprop="itemListElement">
+              <li itemscope itemprop="itemListElement" itemtype="https://schema.org/ListItem">
                 <a class="breadcrumbs__item" href="services.html" itemprop="item">
                   <span itemprop="name">Сервис</span>
                 </a>
                 <meta itemprop="position" content="2" />
               </li>
-              <li itemscope itemprop="itemListElement">
+              <li itemscope itemprop="itemListElement" itemtype="https://schema.org/ListItem">
                 <a class="breadcrumbs__item" href="about.html" itemprop="item">
                   <span itemprop="name">О портале</span>
                 </a>
                 <meta itemprop="position" content="3" />
               </li>
-              <li itemscope itemprop="itemListElement">
+              <li itemscope itemprop="itemListElement" itemtype="https://schema.org/ListItem">
                 <a class="breadcrumbs__item breadcrumbs__item_active" href="cookie-policies.html" itemprop="item">
                   <span itemprop="name">Политика в отношении файлов Cookie</span>
                 </a>
@@ -857,7 +857,7 @@
       <div class="footer__info">
         <div class="footer__block">
           <a href="main.html" class="footer__logo">
-            <img data-src="img/logo.svg" src="img/base24.png" alt="">
+            <img data-src="img/logo.svg?_v=1632589147598" src="img/base24.png?_v=1632589147598" alt="">
           </a>
           <div class="footer__block-text">
             <p class="footer__text">© 2015-2021, ООО «Семейный доктор» <a href="https://www.rusprofile.ru/id/7535774">ОГРН 1153668014390</a></p>
@@ -985,6 +985,6 @@
 		</div>
 	</div>
 </div>
-		<script defer src="js/app-about.min.js"></script>
+		<script defer src="js/app-about.min.js?_v=20210925195907"></script>
 	</body>
 </html>
