--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Вывод из запоя на дому в вашем городе круглосуточно</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
-	<link rel="stylesheet" href="css/style.min.css">
+	<link rel="stylesheet" href="css/style.min.css?_v=20210925195907">
 	<link rel="shortcut icon" href="img/logo.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -15,7 +15,7 @@
 		<a href="main.html" class="header__logo">
 			<picture>
 				<source data-srcset="img/logo.webp" srcset="" type="image/webp">
-				<img data-src="img/logo.png" src="" alt="">
+				<img data-src="img/logo.png?_v=1632589147598" src="" alt="">
 			</picture>
 		</a>
 		<div class="header__slogan">Медицинская помощь <b>на дому и в клинике</b><br> {вашем городе}</div>
@@ -100,7 +100,7 @@
 							<div class="page-form__image page-form__image_1">
 								<picture>
 									<source data-srcset="img/page-form/doctor1.webp" srcset="" type="image/webp">
-									<img data-src="img/page-form/doctor1.png" src="" alt="">
+									<img data-src="img/page-form/doctor1.png?_v=1632589147598" src="" alt="">
 								</picture>
 							</div>
 							<div class="page-form__content">
@@ -115,7 +115,7 @@
 							<div class="page-form__image page-form__image_2">
 								<picture>
 									<source data-srcset="img/page-form/label-anon.webp" srcset="" type="image/webp">
-									<img data-src="img/page-form/label-anon.png" src="" alt="">
+									<img data-src="img/page-form/label-anon.png?_v=1632589147598" src="" alt="">
 								</picture>
 							</div>
 						</div>
@@ -132,7 +132,7 @@
 								<div class="item-conditions__image">
 									<picture>
 										<source data-srcset="img/conditions/conditions1.webp" srcset="" type="image/webp">
-										<img data-src="img/conditions/conditions1.jpg" src="" alt="">
+										<img data-src="img/conditions/conditions1.jpg?_v=1632589147598" src="" alt="">
 									</picture>
 								</div>
 								<div class="item-conditions__content">
@@ -144,7 +144,7 @@
 								<div class="item-conditions__image">
 									<picture>
 										<source data-srcset="img/conditions/conditions2.webp" srcset="" type="image/webp">
-										<img data-src="img/conditions/conditions2.jpg" src="" alt="">
+										<img data-src="img/conditions/conditions2.jpg?_v=1632589147598" src="" alt="">
 									</picture>
 								</div>
 								<div class="item-conditions__content">
@@ -156,7 +156,7 @@
 								<div class="item-conditions__image">
 									<picture>
 										<source data-srcset="img/conditions/conditions3.webp" srcset="" type="image/webp">
-										<img data-src="img/conditions/conditions3.jpg" src="" alt="">
+										<img data-src="img/conditions/conditions3.jpg?_v=1632589147598" src="" alt="">
 									</picture>
 								</div>
 								<div class="item-conditions__content">
@@ -168,7 +168,7 @@
 								<div class="item-conditions__image">
 									<picture>
 										<source data-srcset="img/conditions/conditions4.webp" srcset="" type="image/webp">
-										<img data-src="img/conditions/conditions4.jpg" src="" alt="">
+										<img data-src="img/conditions/conditions4.jpg?_v=1632589147598" src="" alt="">
 									</picture>
 								</div>
 								<div class="item-conditions__content">
@@ -180,7 +180,7 @@
 								<div class="item-conditions__image">
 									<picture>
 										<source data-srcset="img/conditions/conditions5.webp" srcset="" type="image/webp">
-										<img data-src="img/conditions/conditions5.jpg" src="" alt="">
+										<img data-src="img/conditions/conditions5.jpg?_v=1632589147598" src="" alt="">
 									</picture>
 								</div>
 								<div class="item-conditions__content">
@@ -192,7 +192,7 @@
 								<div class="item-conditions__image">
 									<picture>
 										<source data-srcset="img/conditions/conditions6.webp" srcset="" type="image/webp">
-										<img data-src="img/conditions/conditions6.jpg" src="" alt="">
+										<img data-src="img/conditions/conditions6.jpg?_v=1632589147598" src="" alt="">
 									</picture>
 								</div>
 								<div class="item-conditions__content">
@@ -204,7 +204,7 @@
 								<div class="item-conditions__image">
 									<picture>
 										<source data-srcset="img/conditions/conditions7.webp" srcset="" type="image/webp">
-										<img data-src="img/conditions/conditions7.jpg" src="" alt="">
+										<img data-src="img/conditions/conditions7.jpg?_v=1632589147598" src="" alt="">
 									</picture>
 								</div>
 								<div class="item-conditions__content">
@@ -216,7 +216,7 @@
 								<div class="item-conditions__image">
 									<picture>
 										<source data-srcset="img/conditions/conditions8.webp" srcset="" type="image/webp">
-										<img data-src="img/conditions/conditions8.jpg" src="" alt="">
+										<img data-src="img/conditions/conditions8.jpg?_v=1632589147598" src="" alt="">
 									</picture>
 								</div>
 								<div class="item-conditions__content">
@@ -228,7 +228,7 @@
 								<div class="item-conditions__image">
 									<picture>
 										<source data-srcset="img/conditions/conditions9.webp" srcset="" type="image/webp">
-										<img data-src="img/conditions/conditions9.jpg" src="" alt="">
+										<img data-src="img/conditions/conditions9.jpg?_v=1632589147598" src="" alt="">
 									</picture>
 								</div>
 								<div class="item-conditions__content">
@@ -240,7 +240,7 @@
 								<div class="item-conditions__image">
 									<picture>
 										<source data-srcset="img/conditions/conditions10.webp" srcset="" type="image/webp">
-										<img data-src="img/conditions/conditions10.jpg" src="" alt="">
+										<img data-src="img/conditions/conditions10.jpg?_v=1632589147598" src="" alt="">
 									</picture>
 								</div>
 								<div class="item-conditions__content">
@@ -257,7 +257,7 @@
 							<div class="bottom-conditions__image">
 								<picture>
 									<source data-srcset="img/conditions/man-license.webp" srcset="" type="image/webp">
-									<img data-src="img/conditions/man-license.png" src="" alt="">
+									<img data-src="img/conditions/man-license.png?_v=1632589147598" src="" alt="">
 								</picture>
 							</div>
 						</div>
@@ -272,7 +272,7 @@
 							<div class="page-form__image page-form__image_1">
 								<picture>
 									<source data-srcset="img/page-form/doctor2.webp" srcset="" type="image/webp">
-									<img data-src="img/page-form/doctor2.png" src="" alt="">
+									<img data-src="img/page-form/doctor2.png?_v=1632589147598" src="" alt="">
 								</picture>
 							</div>
 							<div class="page-form__content">
@@ -287,7 +287,7 @@
 							<div class="page-form__image page-form__image_2">
 								<picture>
 									<source data-srcset="img/page-form/label-anon2.webp" srcset="" type="image/webp">
-									<img data-src="img/page-form/label-anon2.png" src="" alt="">
+									<img data-src="img/page-form/label-anon2.png?_v=1632589147598" src="" alt="">
 								</picture>
 							</div>
 						</div>
@@ -446,7 +446,7 @@
 												<div class="item-feedback__avatar">
 													<picture>
 														<source data-srcset="img/avatar.webp" srcset="" type="image/webp">
-														<img data-src="img/avatar.png" src="" alt="">
+														<img data-src="img/avatar.png?_v=1632589147598" src="" alt="">
 													</picture>
 												</div>
 												<div class="item-feedback__user-info">
@@ -462,7 +462,7 @@
 												<div class="item-feedback__avatar">
 													<picture>
 														<source data-srcset="img/avatar.webp" srcset="" type="image/webp">
-														<img data-src="img/avatar.png" src="" alt="">
+														<img data-src="img/avatar.png?_v=1632589147598" src="" alt="">
 													</picture>
 												</div>
 												<div class="item-feedback__user-info">
@@ -478,7 +478,7 @@
 												<div class="item-feedback__avatar">
 													<picture>
 														<source data-srcset="img/avatar.webp" srcset="" type="image/webp">
-														<img data-src="img/avatar.png" src="" alt="">
+														<img data-src="img/avatar.png?_v=1632589147598" src="" alt="">
 													</picture>
 												</div>
 												<div class="item-feedback__user-info">
@@ -590,7 +590,7 @@
 							<div class="page-form__image page-form__image_1">
 								<picture>
 									<source data-srcset="img/page-form/doctor3.webp" srcset="" type="image/webp">
-									<img data-src="img/page-form/doctor3.png" src="" alt="">
+									<img data-src="img/page-form/doctor3.png?_v=1632589147598" src="" alt="">
 								</picture>
 							</div>
 							<div class="page-form__content">
@@ -601,7 +601,7 @@
 							<div class="page-form__image page-form__image_2">
 								<picture>
 									<source data-srcset="img/page-form/label-anon3.webp" srcset="" type="image/webp">
-									<img data-src="img/page-form/label-anon3.png" src="" alt="">
+									<img data-src="img/page-form/label-anon3.png?_v=1632589147598" src="" alt="">
 								</picture>
 							</div>
 						</div>
@@ -618,7 +618,7 @@
 								<div class="item-warranty__image">
 									<picture>
 										<source data-srcset="img/warranty/warranty1.webp" srcset="" type="image/webp">
-										<img data-src="img/warranty/warranty1.png" src="" alt="">
+										<img data-src="img/warranty/warranty1.png?_v=1632589147598" src="" alt="">
 									</picture>
 								</div>
 								<p class="item-warranty__text">Гарантируем, никто <br> не узнает, кто мы и зачем <br> приходили.</p>
@@ -628,7 +628,7 @@
 								<div class="item-warranty__image">
 									<picture>
 										<source data-srcset="img/warranty/warranty2.webp" srcset="" type="image/webp">
-										<img data-src="img/warranty/warranty2.png" src="" alt="">
+										<img data-src="img/warranty/warranty2.png?_v=1632589147598" src="" alt="">
 									</picture>
 								</div>
 								<p class="item-warranty__text">Проведем предварительную <br> диагностику, чтобы исключить <br> нежелательную реакцию.</p>
@@ -637,7 +637,7 @@
 								<div class="item-warranty__image">
 									<picture>
 										<source data-srcset="img/warranty/warranty3.webp" srcset="" type="image/webp">
-										<img data-src="img/warranty/warranty3.png" src="" alt="">
+										<img data-src="img/warranty/warranty3.png?_v=1632589147598" src="" alt="">
 									</picture>
 								</div>
 								<p class="item-warranty__text">Внимание! Гарантируем <br> результат ТОЛЬКО в случае <br> следования нашим <br> рекомендациям.</p>
@@ -649,7 +649,7 @@
 								<div class="item-warranty__image">
 									<picture>
 										<source data-srcset="img/warranty/warranty4.webp" srcset="" type="image/webp">
-										<img data-src="img/warranty/warranty4.png" src="" alt="">
+										<img data-src="img/warranty/warranty4.png?_v=1632589147598" src="" alt="">
 									</picture>
 								</div>
 								<p class="item-warranty__text">Гарантируем использование <br> качественных <br> препаратов.</p>
@@ -714,7 +714,7 @@
 		<a href="main.html" class="header__logo">
 			<picture>
 				<source data-srcset="img/logo.webp" srcset="" type="image/webp">
-				<img data-src="img/logo.png" src="" alt="">
+				<img data-src="img/logo.png?_v=1632589147598" src="" alt="">
 			</picture>
 		</a>
 		<div class="header__slogan">Медицинская помощь <b>на дому<br> и в клинике</b> {вашем городе}</div>
@@ -862,6 +862,6 @@
 		</div>
 	</div>
 </div>
-		<script defer src="js/app.min.js"></script>
+		<script defer src="js/app.min.js?_v=20210925195907"></script>
 	</body>
 </html>
