--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
 	<title>Частная наркологическая клиника в вашем городе</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
-	<link rel="stylesheet" href="css/style-main.min.css">
+	<link rel="stylesheet" href="css/style-main.min.css?_v=20210925195907">
 	<link rel="shortcut icon" href="img/logo.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -15,7 +15,7 @@
 		<a href="main.html" class="header__logo">
 			<picture>
 				<source data-srcset="img/logo.webp" srcset="" type="image/webp">
-				<img data-src="img/logo.png" src="" alt="">
+				<img data-src="img/logo.png?_v=1632589147598" src="" alt="">
 			</picture>
 		</a>
 		<div class="header__slogan">Наркологичесткая помощь<br> <b>на дому и в клинике</b> {вашем городе}</div>
@@ -69,7 +69,7 @@
               <div class="main__image">
                 <picture>
                   <source data-srcset="img/logo-big.webp" srcset="" type="image/webp">
-                  <img data-src="img/logo-big.png" src="" alt="">
+                  <img data-src="img/logo-big.png?_v=1632589147598" src="" alt="">
                 </picture>
               </div>
               <div class="main__control">
@@ -128,13 +128,13 @@
 							<div class="caption__image">
 								<picture>
 									<source data-srcset="img/car-image.webp" srcset="" type="image/webp">
-									<img data-src="img/car-image.png" src="" alt="">
+									<img data-src="img/car-image.png?_v=1632589147598" src="" alt="">
 								</picture>
 							</div>
 							<div class="caption__logo">
 								<picture>
 									<source data-srcset="img/logo-big.webp" srcset="" type="image/webp">
-									<img data-src="img/logo-big.png" src="" alt="">
+									<img data-src="img/logo-big.png?_v=1632589147598" src="" alt="">
 								</picture>
 							</div>
 							<h2 class="caption__text"><span>Вызов нарколога</span><br> на дом <b>{вашем городе}</b></h2>
@@ -157,7 +157,7 @@
 							<div class="licence__image">
 								<picture>
 									<source data-srcset="img/conditions/man-license.webp" srcset="" type="image/webp">
-									<img data-src="img/conditions/man-license.png" src="" alt="">
+									<img data-src="img/conditions/man-license.png?_v=1632589147598" src="" alt="">
 								</picture>
 							</div>
 						</div>
@@ -205,7 +205,7 @@
 							<div class="page-form__image page-form__image_1">
 								<picture>
 									<source data-srcset="img/page-form/doctor4.webp" srcset="" type="image/webp">
-									<img data-src="img/page-form/doctor4.png" src="" alt="">
+									<img data-src="img/page-form/doctor4.png?_v=1632589147598" src="" alt="">
 								</picture>
 							</div>
 							<div class="page-form__content">
@@ -216,7 +216,7 @@
 							<div class="page-form__image page-form__image_2">
 								<picture>
 									<source data-srcset="img/page-form/label-anon4.webp" srcset="" type="image/webp">
-									<img data-src="img/page-form/label-anon4.png" src="" alt="">
+									<img data-src="img/page-form/label-anon4.png?_v=1632589147598" src="" alt="">
 								</picture>
 							</div>
 						</div>
@@ -230,7 +230,7 @@
 		<a href="main.html" class="header__logo">
 			<picture>
 				<source data-srcset="img/logo.webp" srcset="" type="image/webp">
-				<img data-src="img/logo.png" src="" alt="">
+				<img data-src="img/logo.png?_v=1632589147598" src="" alt="">
 			</picture>
 		</a>
 		<div class="header__slogan">Наркологичесткая помощь<br> <b>на дому и в клинике</b> {вашем городе}</div>
@@ -398,6 +398,6 @@
 		</div>
 	</div>
 </div>
-		<script defer src="js/app-main.min.js"></script>
+		<script defer src="js/app-main.min.js?_v=20210925195907"></script>
 	</body>
 </html>
