--- a/policy.html
+++ b/policy.html
@@ -4,8 +4,8 @@
 	<title>Пользовательское соглашение | med24.online</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
-	<meta name="description" content="Информации о сервисе компании Med24.Online">
-	<link rel="stylesheet" href="css/style-about.min.css">
+	<meta name="description" content="@@description">
+	<link rel="stylesheet" href="css/style-about.min.css?_v=20210925195907">
 	<link rel="shortcut icon" href="img/logo.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -50,7 +50,7 @@
 		</div>
 
 		<div class="header__logo logo-header">
-			<a href="main.html" class="logo-header__link">med24<img src="img/icons/heart.svg" alt="">online</a>
+			<a href="main.html" class="logo-header__link">med24<img src="img/icons/heart.svg?_v=1632589147598" alt="">online</a>
 			<div class="logo-header__text">Медицинский портал</div>
 		</div>
 		
@@ -503,26 +503,26 @@
         <!--breadcrumbs start-->
         <div class="breadcrumbs">
           <div class="_container">
-            <ol class="breadcrumb breadcrumbs__list" itemscope>
-              <li itemscope itemprop="itemListElement">
+            <ol class="breadcrumb breadcrumbs__list" itemscope itemtype="https://schema.org/BreadcrumbList">
+              <li itemscope itemprop="itemListElement" itemtype="https://schema.org/ListItem">
                 <a class="breadcrumbs__item" href="main.html" itemprop="item">
                   <span itemprop="name">Главная</span>
                 </a>
                 <meta itemprop="position" content="1" />
               </li>
-              <li itemscope itemprop="itemListElement">
+              <li itemscope itemprop="itemListElement" itemtype="https://schema.org/ListItem">
                 <a class="breadcrumbs__item" href="services.html" itemprop="item">
                   <span itemprop="name">Сервис</span>
                 </a>
                 <meta itemprop="position" content="2" />
               </li>
-              <li itemscope itemprop="itemListElement">
+              <li itemscope itemprop="itemListElement" itemtype="https://schema.org/ListItem">
                 <a class="breadcrumbs__item" href="about.html" itemprop="item">
                   <span itemprop="name">О портале</span>
                 </a>
                 <meta itemprop="position" content="3" />
               </li>
-              <li itemscope itemprop="itemListElement">
+              <li itemscope itemprop="itemListElement" itemtype="https://schema.org/ListItem">
                 <a class="breadcrumbs__item breadcrumbs__item_active" href="policy.html" itemprop="item">
                   <span itemprop="name">Пользовательское соглашение</span>
                 </a>
@@ -659,13 +659,7 @@
                     <div class="contents-about__icon contents-about__icon_social">
                       <svg fill="#4A4742" height="24" width="24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 481.6 481.6" style="enable-background:new 0 0 481.6 481.6;" xml:space="preserve">
                         <g>
-                          <path d="M381.6,309.4c-27.7,0-52.4,13.2-68.2,33.6l-132.3-73.9c3.1-8.9,4.8-18.5,4.8-28.4c0-10-1.7-19.5-4.9-28.5l132.2-73.8
-                            c15.7,20.5,40.5,33.8,68.3,33.8c47.4,0,86.1-38.6,86.1-86.1S429,0,381.5,0s-86.1,38.6-86.1,86.1c0,10,1.7,19.6,4.9,28.5
-                            l-132.1,73.8c-15.7-20.6-40.5-33.8-68.3-33.8c-47.4,0-86.1,38.6-86.1,86.1s38.7,86.1,86.2,86.1c27.8,0,52.6-13.3,68.4-33.9
-                            l132.2,73.9c-3.2,9-5,18.7-5,28.7c0,47.4,38.6,86.1,86.1,86.1s86.1-38.6,86.1-86.1S429.1,309.4,381.6,309.4z M381.6,27.1
-                            c32.6,0,59.1,26.5,59.1,59.1s-26.5,59.1-59.1,59.1s-59.1-26.5-59.1-59.1S349.1,27.1,381.6,27.1z M100,299.8
-                            c-32.6,0-59.1-26.5-59.1-59.1s26.5-59.1,59.1-59.1s59.1,26.5,59.1,59.1S132.5,299.8,100,299.8z M381.6,454.5
-                            c-32.6,0-59.1-26.5-59.1-59.1c0-32.6,26.5-59.1,59.1-59.1s59.1,26.5,59.1,59.1C440.7,428,414.2,454.5,381.6,454.5z"/>
+                          <path d="M381.6,309.4c-27.7,0-52.4,13.2-68.2,33.6l-132.3-73.9c3.1-8.9,4.8-18.5,4.8-28.4c0-10-1.7-19.5-4.9-28.5l132.2-73.8 c15.7,20.5,40.5,33.8,68.3,33.8c47.4,0,86.1-38.6,86.1-86.1S429,0,381.5,0s-86.1,38.6-86.1,86.1c0,10,1.7,19.6,4.9,28.5 l-132.1,73.8c-15.7-20.6-40.5-33.8-68.3-33.8c-47.4,0-86.1,38.6-86.1,86.1s38.7,86.1,86.2,86.1c27.8,0,52.6-13.3,68.4-33.9 l132.2,73.9c-3.2,9-5,18.7-5,28.7c0,47.4,38.6,86.1,86.1,86.1s86.1-38.6,86.1-86.1S429.1,309.4,381.6,309.4z M381.6,27.1 c32.6,0,59.1,26.5,59.1,59.1s-26.5,59.1-59.1,59.1s-59.1-26.5-59.1-59.1S349.1,27.1,381.6,27.1z M100,299.8 c-32.6,0-59.1-26.5-59.1-59.1s26.5-59.1,59.1-59.1s59.1,26.5,59.1,59.1S132.5,299.8,100,299.8z M381.6,454.5 c-32.6,0-59.1-26.5-59.1-59.1c0-32.6,26.5-59.1,59.1-59.1s59.1,26.5,59.1,59.1C440.7,428,414.2,454.5,381.6,454.5z"/>
                         </g>
                       </svg>
                     </div>
@@ -675,10 +669,7 @@
                       <a href="#" class="contents-about__social-icon">
                         <svg fill="#4A4742" height="20" width="20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
                           <g>
-                            <path d="M53.9791489,9.1429005H50.010849c-0.0826988,0-0.1562004,0.0283995-0.2331009,0.0469999V5.0228 C49.7777481,2.253,47.4731483,0,44.6398468,0h-34.422596C7.3839517,0,5.0793519,2.253,5.0793519,5.0228v46.8432999 c0,2.7697983,2.3045998,5.0228004,5.1378999,5.0228004h6.0367002v2.2678986C16.253952,61.8274002,18.4702511,64,21.1954517,64 h32.783699c2.7252007,0,4.9414978-2.1725998,4.9414978-4.8432007V13.9861002 C58.9206467,11.3155003,56.7043495,9.1429005,53.9791489,9.1429005z M7.1110516,51.8661003V5.0228
-                              c0-1.6487999,1.3938999-2.9909999,3.1062002-2.9909999h34.422596c1.7123032,0,3.1062012,1.3422,3.1062012,2.9909999v46.8432999
-                              c0,1.6487999-1.393898,2.9911003-3.1062012,2.9911003h-34.422596C8.5049515,54.8572006,7.1110516,53.5149002,7.1110516,51.8661003z
-                              M56.8888474,59.1567993c0,1.550602-1.3055,2.8115005-2.9096985,2.8115005h-32.783699
+                            <path d="M53.9791489,9.1429005H50.010849c-0.0826988,0-0.1562004,0.0283995-0.2331009,0.0469999V5.0228 C49.7777481,2.253,47.4731483,0,44.6398468,0h-34.422596C7.3839517,0,5.0793519,2.253,5.0793519,5.0228v46.8432999 c0,2.7697983,2.3045998,5.0228004,5.1378999,5.0228004h6.0367002v2.2678986C16.253952,61.8274002,18.4702511,64,21.1954517,64 h32.783699c2.7252007,0,4.9414978-2.1725998,4.9414978-4.8432007V13.9861002 C58.9206467,11.3155003,56.7043495,9.1429005,53.9791489,9.1429005z M7.1110516,51.8661003V5.0228 c0-1.6487999,1.3938999-2.9909999,3.1062002-2.9909999h34.422596c1.7123032,0,3.1062012,1.3422,3.1062012,2.9909999v46.8432999 c0,1.6487999-1.393898,2.9911003-3.1062012,2.9911003h-34.422596C8.5049515,54.8572006,7.1110516,53.5149002,7.1110516,51.8661003z M56.8888474,59.1567993c0,1.550602-1.3055,2.8115005-2.9096985,2.8115005h-32.783699
                               c-1.6042004,0-2.9097996-1.2608986-2.9097996-2.8115005v-2.2678986h26.3541946
                               c2.8333015,0,5.1379013-2.2530022,5.1379013-5.0228004V11.1275997c0.0769005,0.0186005,0.1504021,0.0469999,0.2331009,0.0469999
                               h3.9682999c1.6041985,0,2.9096985,1.2609005,2.9096985,2.8115005V59.1567993z"/>
@@ -870,7 +861,7 @@
       <div class="footer__info">
         <div class="footer__block">
           <a href="main.html" class="footer__logo">
-            <img data-src="img/logo.svg" src="img/base24.png" alt="">
+            <img data-src="img/logo.svg?_v=1632589147598" src="img/base24.png?_v=1632589147598" alt="">
           </a>
           <div class="footer__block-text">
             <p class="footer__text">© 2015-2021, ООО «Семейный доктор» <a href="https://www.rusprofile.ru/id/7535774">ОГРН 1153668014390</a></p>
@@ -998,6 +989,6 @@
 		</div>
 	</div>
 </div>
-		<script defer src="js/app-about.min.js"></script>
+		<script defer src="js/app-about.min.js?_v=20210925195907"></script>
 	</body>
 </html>
