--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<meta name="description" content="Информации о сервисе компании Med24.Online">
-	<link rel="stylesheet" href="css/style-about.min.css">
+	<link rel="stylesheet" href="css/style-about.min.css?_v=20210925195907">
 	<link rel="shortcut icon" href="img/logo.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -50,7 +50,7 @@
 		</div>
 
 		<div class="header__logo logo-header">
-			<a href="main.html" class="logo-header__link">med24<img src="img/icons/heart.svg" alt="">online</a>
+			<a href="main.html" class="logo-header__link">med24<img src="img/icons/heart.svg?_v=1632589147598" alt="">online</a>
 			<div class="logo-header__text">Медицинский портал</div>
 		</div>
 		
@@ -503,14 +503,14 @@
         <!--breadcrumbs start-->
         <div class="breadcrumbs">
           <div class="_container">
-            <ol class="breadcrumb breadcrumbs__list" itemscope>
-              <li itemscope itemprop="itemListElement">
+            <ol class="breadcrumb breadcrumbs__list" itemscope itemtype="https://schema.org/BreadcrumbList">
+              <li itemscope itemprop="itemListElement" itemtype="https://schema.org/ListItem">
                 <a class="breadcrumbs__item" href="main.html" itemprop="item">
                   <span itemprop="name">Главная</span>
                 </a>
                 <meta itemprop="position" content="1" />
               </li>
-              <li itemscope itemprop="itemListElement">
+              <li itemscope itemprop="itemListElement" itemtype="https://schema.org/ListItem">
                 <a class="breadcrumbs__item breadcrumbs__item_active" href="services.html" itemprop="item">
                   <span itemprop="name">Сервис</span>
                 </a>
@@ -523,14 +523,14 @@
 
         <section class="article-main">
           <div class="_container">
-            <h1 class="article-main__title">Сервис <span>med24<img src="img/icons/heart.svg" alt="">online</span></h1>
+            <h1 class="article-main__title">Сервис <span>med24<img src="img/icons/heart.svg?_v=1632589147598" alt="">online</span></h1>
           </div>
         </section>
 				
         <!--article start-->
         <section class="article">
           <div class="_container">
-            <div class="article__main-icon"><img src="img/icons/computer.svg" alt=""></div>
+            <div class="article__main-icon"><img src="img/icons/computer.svg?_v=1632589147598" alt=""></div>
             <div class="article__body  _spollers _one">
               <div class="article__item">
                 <h2 class="_spoller" data-max="767.98"><span class="article__title-list">О med24.online</span><span class="article__icon"></span></h2>
@@ -686,7 +686,7 @@
       <div class="footer__info">
         <div class="footer__block">
           <a href="main.html" class="footer__logo">
-            <img data-src="img/logo.svg" src="img/base24.png" alt="">
+            <img data-src="img/logo.svg?_v=1632589147598" src="img/base24.png?_v=1632589147598" alt="">
           </a>
           <div class="footer__block-text">
             <p class="footer__text">© 2015-2021, ООО «Семейный доктор» <a href="https://www.rusprofile.ru/id/7535774">ОГРН 1153668014390</a></p>
@@ -814,6 +814,6 @@
 		</div>
 	</div>
 </div>
-		<script defer src="js/app-about.min.js"></script>
+		<script defer src="js/app-about.min.js?_v=20210925195907"></script>
 	</body>
 </html>
