--- a/privacy.html
+++ b/privacy.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<meta name="description" content="Целью политики конфиденциальности является обеспечение защиты прав и свобод человека и гражданина при обработке его персональных данных, в том числе защиты прав на неприкосновенность частной жизни, личную и семейную тайну">
-	<link rel="stylesheet" href="css/style-about.min.css">
+	<link rel="stylesheet" href="css/style-about.min.css?_v=20210925195907">
 	<link rel="shortcut icon" href="img/logo.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -50,7 +50,7 @@
 		</div>
 
 		<div class="header__logo logo-header">
-			<a href="main.html" class="logo-header__link">med24<img src="img/icons/heart.svg" alt="">online</a>
+			<a href="main.html" class="logo-header__link">med24<img src="img/icons/heart.svg?_v=1632589147598" alt="">online</a>
 			<div class="logo-header__text">Медицинский портал</div>
 		</div>
 		
@@ -893,7 +893,7 @@
       <div class="footer__info">
         <div class="footer__block">
           <a href="main.html" class="footer__logo">
-            <img data-src="img/logo.svg" src="img/base24.png" alt="">
+            <img data-src="img/logo.svg?_v=1632589147598" src="img/base24.png?_v=1632589147598" alt="">
           </a>
           <div class="footer__block-text">
             <p class="footer__text">© 2015-2021, ООО «Семейный доктор» <a href="https://www.rusprofile.ru/id/7535774">ОГРН 1153668014390</a></p>
@@ -1021,6 +1021,6 @@
 		</div>
 	</div>
 </div>
-		<script defer src="js/app-about.min.js"></script>
+		<script defer src="js/app-about.min.js?_v=20210925195907"></script>
 	</body>
 </html>
